tests/ui/not_send2.stderr
error[E0277]: `*mut clarax::Python<'static>` cannot be shared between threads safely
  --> tests/ui/not_send2.rs:8:19
   |
 8 |           py.detach(|| {
   |  ____________------_^
   | |            |
   | |            required by a bound introduced by this call
 9 | |             println!("{:?}", string);
10 | |         });
   | |_________^ `*mut clarax::Python<'static>` cannot be shared between threads safely
   |
   = help: within `clarax::Bound<'_, PyString>`, the trait `Sync` is not implemented for `*mut clarax::Python<'static>`
note: required because it appears within the type `PhantomData<*mut clarax::Python<'static>>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `clarax::marker::NotSend`
  --> src/marker.rs
   |
   | struct NotSend(PhantomData<*mut Python<'static>>);
   |        ^^^^^^^
note: required because it appears within the type `PhantomData<clarax::marker::NotSend>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `clarax::Python<'_>`
  --> src/marker.rs
   |
   | pub struct Python<'py>(PhantomData<&'py AttachGuard>, PhantomData<NotSend>);
   |            ^^^^^^
note: required because it appears within the type `clarax::Bound<'_, PyString>`
  --> src/instance.rs
   |
   | pub struct Bound<'py, T>(Python<'py>, ManuallyDrop<Py<T>>);
   |            ^^^^^
   = note: required for `&clarax::Bound<'_, PyString>` to implement `Send`
note: required because it's used within this closure
  --> tests/ui/not_send2.rs:8:19
   |
 8 |         py.detach(|| {
   |                   ^^
   = note: required for `{closure@$DIR/tests/ui/not_send2.rs:8:19: 8:21}` to implement `Ungil`
note: required by a bound in `clarax::Python::<'py>::detach`
  --> src/marker.rs
   |
   |     pub fn detach<T, F>(self, f: F) -> T
   |            ------ required by a bound in this associated function
   |     where
   |         F: Ungil + FnOnce() -> T,
   |            ^^^^^ required by this bound in `Python::<'py>::detach`
